--- a/services/gateway/Dockerfile
+++ b/services/gateway/Dockerfile
@@ -9,4 +9,4 @@ RUN dotnet publish -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
 COPY --from=build /App/out .
-ENTRYPOINT ["dotnet", "DotNet.Docker.dll"]
+ENTRYPOINT ["dotnet", "LearningPath.Gateway.dll"]
