--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: webserver-service
     ports:
-      - "8081:8081"
+      - "8080:8081"
     networks:
       - microservices-network
 
@@ -17,9 +17,10 @@ services:
       dockerfile: Dockerfile
     container_name: dag-service
     ports:
-      - "8082:8082"
+      - "8082:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - PYTHONPATH=/usr/src/app/src
     networks:
       - microservices-network
 
@@ -29,7 +30,7 @@ services:
       dockerfile: Dockerfile
     container_name: gateway-service
     ports:
-      - "8080:8080"
+      - "8081:8080"
     networks:
       - microservices-network
     depends_on:
