--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  webserver-service:
+  webserver:
     build:
       context: ./services/webserver
       dockerfile: Dockerfile
@@ -11,7 +11,7 @@ services:
     networks:
       - microservices-network
 
-  dag-service:
+  dag:
     build:
       context: ./services/dag
       dockerfile: Dockerfile
@@ -24,7 +24,7 @@ services:
     networks:
       - microservices-network
 
-  gateway-service:
+  gateway:
     build:
       context: ./services/gateway
       dockerfile: Dockerfile
