--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,11 +31,13 @@ services:
     container_name: gateway-service
     ports:
       - "8081:8080"
+    environment:
+      - DagClient__BaseUrl=http://dag:8080
     networks:
       - microservices-network
     depends_on:
-      - dag-service
-      - webserver-service
+      - dag
+      - webserver
 
 networks:
   microservices-network:
