--- a/services/gateway/src/LearningPath.Gateway/Contracts/gateway.api.yaml
+++ b/services/gateway/src/LearningPath.Gateway/Contracts/gateway.api.yaml
@@ -3,7 +3,7 @@ info:
   title: Learning Path Api
   version: '1.0'
 servers:
-  - url: https://api.server.test/v1
+  - url: https://gateway:8080
 paths:
   /ping:
     get:
