--- a/services/webserver/.gitignore
+++ b/services/webserver/.gitignore
@@ -8,8 +8,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
-dist-ssr
 *.local
 
 # Editor directories and files
@@ -24,5 +22,5 @@ dist-ssr
 *.sw?
 
 # auto generated
-src/clients
 contracts
+web/dist/
