--- a/services/proxy/nginx.conf
+++ b/services/proxy/nginx.conf
@@ -3,20 +3,12 @@ events {
 }
 
 http {
-    upstream frontend {
-        server frontend:3000;
-    }
-
-    upstream gateway {
-        server gateway:8080;
-    }
-
     server {
         listen 80;
         server_name localhost;
 
         location /api/ {
-            proxy_pass http://gateway/;
+            proxy_pass http://gateway:8080/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -25,7 +17,7 @@ http {
         }
 
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
