--- a/services/frontend/src/ui/package.json
+++ b/services/frontend/src/ui/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-grid-layout": "^1.5.2"
+    "react-grid-layout": "^1.5.2",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
